Fix problem with header not aligning
fix problem with justify-content not working on header
by putting the header parent and child above section 1

--- a/style.css
+++ b/style.css
@@ -16,8 +16,10 @@ body {
 }
 .header {
     display: flex;
+    justify-content: space-between;
+    background-color: #1f2937;
 }
-.logo{
+.logo {
     font-size: 24px;
     color: #f9faf8;
     font-weight: bold;
@@ -32,7 +34,6 @@ ul {
     display: flex;
     gap: 16px;
 }
-
 
 .information {
     display: flex;
